--- a/QQ群重复成员查找/QQGroupsRMS/QQGroupsRMS.vcxproj
+++ b/QQ群重复成员查找/QQGroupsRMS/QQGroupsRMS.vcxproj
@@ -23,13 +23,13 @@
     <ProjectGuid>{CBE8C4AD-F3AB-4DD8-994E-C893100F7F25}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>QQGroupsRMS</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -139,6 +139,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="rms.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ContExec.h" />
+    <ClInclude Include="DLRSearchBinTree.h" />
+    <ClInclude Include="FileRead.h" />
+    <ClInclude Include="Function.h" />
+    <ClInclude Include="HashCmp.h" />
+    <ClInclude Include="insBinTree.h" />
+    <ClInclude Include="InsResList.h" />
+    <ClInclude Include="insHash.h" />
+    <ClInclude Include="isChinese.h" />
+    <ClInclude Include="KMP.h" />
+    <ClInclude Include="BINNode.h" />
+    <ClInclude Include="LRDVisitBinTree.h" />
+    <ClInclude Include="MemberNode.h" />
+    <ClInclude Include="resNode.h" />
+    <ClInclude Include="SearchHash.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
