--- a/ＱＱ群重复成员查找/ＱＱ群重复成员查找/ＱＱ群重复成员查找.vcxproj.filters
+++ b/ＱＱ群重复成员查找/ＱＱ群重复成员查找/ＱＱ群重复成员查找.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="insHash.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FileWrite.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
